# noire

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: build.yml
src/noire/: __init__.py  constants.py  noire.py
src/noire/models/: membership.py  moderation.py  settings.py
src/noire/parsers/: members_list.py  moderation.py  settings.py
tools/: build-and-release.sh  check-code.sh  install-dev.sh
